--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body{
 
 html {
     height: 100%;
-    background: #151f28;
+    background: #000000;
     display: grid;
     place-items: center;
 }
